<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control</name>
  <version>1.0.0</version>
  <description>The robot_control package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <!--depend>apriltags_ros</depend-->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <!--depend>cv2</depend>
  <depend>yaml</depend>
  <depend>numpy</depend>
  <depend>sys</depend-->

  <!-- test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend-->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
